@@ -15,8 +15,8 @@
 #  limitations under the License.
 #
 
-
-JAVA_OPTS=""
-sdk use java 21.0.1-graal
-time java $JAVA_OPTS --class-path target/average-1.0.0-SNAPSHOT.jar dev.morling.onebrc.CalculateAverage_jmiettinen
+filename=recording_$(date +%s).jfr
+JAVA_OPTS="--enable-preview"
+#sdk use java 21.0.1-graal
+time java ${JAVA_OPTS} --class-path target/average-1.0.0-SNAPSHOT.jar dev.morling.onebrc.CalculateAverage_jmiettinen
 
